--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,6 @@
-
 <div class="top-button" onclick="movetop()">
-    <img src="assets/up.svg" alt="" style="width: 37px;height:37px;z-index:1000;">
-    <h1 style=" font-weight: 400; top:-12px; position:relative;">Top</h1>
+    <img src="assets/up.svg" alt="" style="width: 6vh;height:6vh;z-index:1000;">
+    <h1 style=" font-weight:400; top:-2vh; position:relative;">Top</h1>
 </div>
   
 <div class="main-1">
@@ -15,9 +14,9 @@
             여러분과 같은 사람을 만나고<br>
             서로 알아갈 수 있는 기회입니다!<br>
         </h2>
-        <img src="assets/공감start.png" alt="" style="width: 350px;height: auto;margin-top:20px;cursor:pointer" onclick="movequiz()">
-        <img src="assets/arrow.svg" alt="" style="width: 35px;height: 35px;fill:white;position:relative;top:-20px;">
-        <img src="assets/arrow.svg" alt="" style="width: 35px;height: 35px;fill:white;position:relative;top: -35px;">
+        <img src="assets/공감start.png" alt="" style="width: 40vh;height: auto;margin-top:20px;cursor:pointer" onclick="movequiz()">
+        <img src="assets/arrow.svg" alt="" style="width:6vh;height: 6vh;fill:white;position:relative;top:-3vh;">
+        <img src="assets/arrow.svg" alt="" style="width: 6vh;height: 6vh;fill:white;position:relative;top: -6vh">
     </div>
 </div>
 
