--- a/app/views/home/qna.html.erb
+++ b/app/views/home/qna.html.erb
@@ -1,5 +1,4 @@
-
-<div class="quiz-box">
+<div class="quiz-1-box">
     <div class="quiz-1 flex-column-center">
         <div class="dog">
             <img src="/assets/dog.gif">
@@ -53,8 +52,6 @@
     console.log(quiz_css_submit);
     $(`${quiz_css_submit}`).appendTo("head");
        
-    
-
     var scroll = $("body").width()*0.6;
     $(".quiz-2-container-content").css({"width": `${scroll}`});
     $("body").css({"overflow": "hidden"});
