--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div class="nav">
       <div class="logo">
-        <h1>Logo With</h1>
+        <a href="/"><h1>Logo With</h1></a>
         <h2>성 성 | 가르칠 교</h2>
       </div>
       <div class="nav-menu-box">
@@ -25,13 +25,13 @@
             <img src="/assets/book.svg">
             <h1>Education</h1>
           </a>
-          <a class="nav-menu" href="/posts/index" style="left:10px;">
-            <img src="/assets/community1.svg" style="top:3px;height: 70px;">
-            <h1 style="top:-21px">Community</h1>
+          <a class="nav-menu" href="/posts/index" style="left:1vh">
+            <img src="/assets/community1.svg" style="top:0vh;height: 6.5vh;">
+            <h1 style="top:-2.3vh">Community</h1>
           </a>
-           <a class="nav-menu" href="/posts/index" style="left:10px;">
-            <img src="/assets/counsel.svg" style="height:55px;">
-            <h1 style="top:-14px">Counsel</h1>
+           <a class="nav-menu" href="/posts/index" style="left:1.5vh;">
+            <img src="/assets/counsel.svg" style="top:-0.2vh;height:5.2vh">
+            <h1 style="top:-1.4vh">Counsel</h1>
           </a>
           <% if user_signed_in? %>
           <a class="nav-menu" >
