--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,7 +5,7 @@
 
 /*main-1*/
 .main-1 {
-    margin-top: 100px;
+    padding-top: 9vh;
     position:  relative;
     width: 100%;
     height: 100%;
@@ -23,17 +23,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 700px;
+    height: 90vh;
 }
 .main-1 h1 {
-    margin-top: 40px;
-    font-size:  40px;
+    font-size:  4vh;
     
 }
 
 .main-1 h2 {
-    margin-top: 20px;
-    font-size: 15px;
+    margin-top: 2vh;
+    font-size:  2vh;
     line-height: 200%;
     font-weight: 200;
     text-align: center;
@@ -42,29 +41,14 @@
 }
 
 .main-1-title {
-
     display: flex;
-
+    margin-top: 10vh;
 }
 
 .main-1-title h1 {
-    font-size: 100px;
-    
+    font-size: 10vh;
 }
 
-.main-1-button {
-    box-shadow: 5px 7px 20px #2929293d;
-    margin-top: 80px;
-    border-radius:70px;
-    width: 270px;
-    height: 65px;
-    background-color: #ff71b1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
 
 /*main-2*/
 .main-2 {
