--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -34,7 +34,7 @@
     margin-top:4vh;
 }
 .login-session-container form .field {
-    width:  25vh;
+    width:  28vh;
     height: 7vh;
     margin-bottom: 3vh;
     display:flex;
@@ -43,11 +43,16 @@
     font-size: 2vh;
 }
 
+.login-session-container form .field label {
+    font-size: 2vh;
+}
+
 .login-session-container form .field input {
     font-size: 2vh;
     width: 100%;
-    height: 4vh; 
+    height: 5vh; 
     border: none;
+    padding: 0.5vh;
     border-bottom: 1px solid black;
     background-color: transparent;
 }
@@ -100,7 +105,7 @@
     flex-direction: column;
     align-items: flex-end;
     padding-right: 1%;
-    top: 93%;
+    top: 94%;
     left:0;
 }
 
