--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -5,7 +5,7 @@
     align-items: center;
 }
 
-.quiz-box {
+.quiz-1-box {
     width: 100%;
     height: 100%;
     position: relative;
@@ -15,83 +15,79 @@
     width: 100%;
     height: 100%;
     background-color: #c94a58;
-    img {
-        width: 400px;
-        height: auto;
-        transform:scaleX(-1);
-    }
-    .dog {
-        position: relative;
-        margin-top: 100px;
-    }
-    .dog::before {
-        content: '';
-        width: 130px;
-        height:100px;
-        position:absolute;
-        top:-8%;
-        left:85%;
-        z-index:999;
-        background: url("dogsay.png") no-repeat;
-        transform: rotate(10deg);
-        background-size: 100% 100%;
-        animation: toggle-animation1 1.2s linear infinite;
-    }
+}
 
-    @keyframes  toggle-animation1{
-        0%{transform:rotate(10deg)}
-        25%{transform:rotate(7deg)}
-        50%{transform:rotate(10deg)}
-        75%{transform:rotate(13deg)}
-        100%{transform:rotate(10deg)}
-    }
+.quiz-1 img {
+    width: auto;
+    height: 30vh;
+    transform:scaleX(-1);
+}
+   
+.quiz-1 .dog {
+    position: relative;
+    margin-top: 5vh;
+}
+   
+.quiz-1 .dog::before {
+    content: '';
+    width: 12vh;
+    height: 10vh;
+    position:absolute;
+    top:-8%;
+    left:85%;
+    z-index:999;
+    background: url("dogsay.png") no-repeat;
+    transform: rotate(10deg);
+    background-size: 100% 100%;
+    animation: toggle-animation1 1.2s linear infinite;
+}
 
-    .message {
+@keyframes  toggle-animation1{
+    0%{transform:rotate(10deg)}
+    25%{transform:rotate(7deg)}
+    50%{transform:rotate(10deg)}
+    75%{transform:rotate(13deg)}
+    100%{transform:rotate(10deg)}
+}
+
+.quiz-1 .message {
         display: flex;
         flex-direction: column;
         align-items:  center;
-        h1 {
-            font-size: 35px;
+}
+
+.quiz-1 .message h1 {
+            font-size: 3.5vh;
             font-weight: 600;
             color: #a13b46;
-            margin-bottom: 13px;
+            margin-bottom: 2vh;
             text-shadow: none;
-        }
-        h2 {
-            margin-bottom: 13px;
-            font-size: 20px;
+}
+
+.quiz-1 .message h2 {
+            margin-bottom: 1vh;
+            font-size: 1.7vh;
             color: rgb(122, 30, 53);
             font-weight:300;
-        }
-    }
 }
 
 .quiz-1 button {
-    margin-top:30px;
+    margin-top: 3vh;
     position:relative;
     border: none;
-    width:200px;
-    height: 60px;
-    border-radius: 60px;
+    width: 20vh;
+    height: 6vh;
+    border-radius: 5vh;
     background-color: rgb(255, 94, 0);
     cursor: pointer;
     box-shadow: 10px 10px 20px rgba(95, 77, 77, 0.205);
-   
-}
-
-.quiz-1 button h1 {
-    color: white;
-    font-size: 23px;
-    font-weight: 500;
-    z-index: 999;
-    position: relative;
 }
 
 .quiz-1 button:after {
     content: '';
     display: block;
     position: absolute;
-    border-radius: 60px;
+    border-radius: 5vh;
     width: 100%;
     height: 100%;
     top: 0;
@@ -106,6 +102,17 @@
     50%{opacity:0;transform:scale(1.3)}
     100%{opacity:0;transform:scale(1.5)}
 }
+
+.quiz-1 button h1 {
+    color: white;
+    font-size: 2.5vh;
+    font-weight: 500;
+    z-index: 999;
+    position: relative;
+}
+
+
+
 
 .quiz-2 {
     width: 100%;
