--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,18 +6,20 @@
     <h2 style="font-size:4vh;">Sign up</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <div class="field">
-        <%= f.label :email %><br />
+        <%= f.label :email %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
-      <div class="field" style="height:10vh">
+      <div class="field" >
+        <div style=" font-size: 2vh;width:100%;">
         <%= f.label :password %>
         <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
+        <em style="font-size: 1.5vh;">(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %>
+        </div>
         <%= f.password_field :password, autocomplete: "off" %>
       </div>
       <div class="field">
-        <%= f.label :password_confirmation %><br />
+        <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation, autocomplete: "off" %>
       </div>
         <%= f.submit "Submit!" %>
