--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,7 +63,6 @@
         <div class="main-3-container-top-box">
             <h1>성교로 이제 단번에 해결!</h1>
             <div class="main-3-container-top">
-                
                 <h1> [ 性 성 성 | 敎 가르칠 교 ] 우리는, 서로가 성에 대해 가르칠 수 있도록 하는 '성교육 플랫폼'입니다!</h1>
             </div>
         </div>
@@ -108,7 +107,7 @@
             <div class="main-4-container-explain">
                 <h1>자격 요건 | 성지식에 능통한 당신이라면!</h1>
             </div>
-            <h4 style="font-size: 16px; margin-top: 20px; color:#28939c;">* 아이디 가입하지 않아도 돼요!</h4>
+            <h4 style="font-size: 1.7vh; margin-top: 20px; color:#28939c;">* 아이디 가입하지 않아도 돼요!</h4>
     </div>
 </div>
 
@@ -123,15 +122,14 @@
     </div>
     <h1>성에 대한 우리의 지식과 생각</h1>
     <h2>같을 수도 다를 수도 틀릴 수도 있다는 것!<h2>
-    <div style="width: 22px;border-bottom:2px solid rgb(103, 28, 107);"></div>
+    <div style="width: 4vh;border-bottom:2px solid rgb(103, 28, 107);"></div>
 </div>
-      
 <div class="main-5">
-    <img src="/assets/left.svg" alt="" style="width:50px; height:50px; transform:rotate(180deg); margin-left:20px;">
+    <img src="/assets/left.svg" alt="" style="width:5vh; height:4vh; transform:rotate(180deg); margin-left:1.5vh;">
     <div class="main-5-container">  
-        <div>
-            <h2 style="color:white;">가장 핫한 성교글!</h2>
-            <h1 style="color: white; font-size: 70px;">Popular Community Post TOP 6</h1>
+        <div style="margin-bottom:2vh;">
+            <h2 style="color:white;font-size:3vh">가장 핫한 성교글!</h2>
+            <h1 style="color: white; font-size: 7vh;">Popular Community Post TOP 6</h1>
         </div>
         
         <div class="main-5-container-post-box">
@@ -195,7 +193,7 @@
             </div>
             </div>
         </div>    
-    <img src="/assets/left.svg" alt="" style="width:50px; height:50px; margin-right:20px;">
+    <img src="/assets/left.svg" alt="" style="width:5vh; height:5vh; margin-right:1.5vh">
 </div>
 
 
