--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -15,7 +15,7 @@
     align-items: center;
     color: white;
     background-color: #954ba2;
-    background: #954ba2 url("main-1-back.png") 50% 0 no-repeat
+    background: #954ba2 url("main-1-back.png") 50% 0 repeat
 }
 
 .main-1-container {
@@ -58,7 +58,6 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    
     background-image: url("빗금.png");
     background-size: auto 60%;
   
@@ -78,27 +77,32 @@
 
 }
 
+.main-2-container-circle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 32vh;
+}
 .main-2-container-circle  h1{
-    margin-top: 15px;
-    font-size: 20px;
+    margin-top: 2vh;
+    font-size: 2vh;
     text-align: center;
 }
 
 .main-2-container-circle  h2{
-    margin-top: 10px;
-    font-size: 20px;
+    margin-top: 1vh;
+    font-size: 2.3vh;
     font-weight: 400;
     text-align: center;
 }
 
 .circle {
     border-radius: 50%;
-    width: 230px;
-    height: 230px;
+    width: 27vh;
+    height: 27vh;
     background-color: aquamarine;
     overflow: hidden;
     border: 13px solid rgb(255, 255, 255);
-    margin: 0 0 0 40px;
 }
 
 .circle img {
@@ -110,7 +114,7 @@
 /*main-3*/
 .main-3 {
     width: 100%;
-    height: 1200px;
+    height: 110vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -120,7 +124,7 @@
 }
 
 .main-3-container {
-    width: 70%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -135,15 +139,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 6%;
-    width: 800px;
-    height: 130px;  
-    
+    width: 100%;
+    height: 15vh;  
+    margin-bottom: 5vh;
 }
 
 .main-3-container-top-box h1{
-    margin-left: 10px;
-    font-size:  70px;
+    margin-left: 1vh;
+    font-size:  8vh;
 }
 
 .main-3-container-top {
@@ -152,7 +155,7 @@
 }
 
 .main-3-container-top h1 {
-    font-size: 18px;
+    font-size:2vh;
 }
 
 .main-3-container-top div h2 {
@@ -161,8 +164,8 @@
 
 .main-3-container-bottom {
     box-shadow: 0px 0px 20px #2929293d;
-    width: 85%;
-    height: 670px;
+    width: 110vh;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -215,16 +218,15 @@
 
 .main-4-container h1 {
     text-align: center;
-    font-size: 20px;
+    font-size: 2.5vh;
     color: white;
    
 }
 
 .main-4-container-circle {
     margin-bottom: 10px;
-   
-    width: 290px;
-    height: 400px;
+    width: 30vh;
+    height: 40vh;
     background-image: url("test.png");
     background-size: auto 100%;
     background-repeat: no-repeat;
@@ -245,8 +247,8 @@
 
 .main-4-container::after {
     content: '';
-    width: 200px;
-    height: 180px;
+    width: 20vh;
+    height: 18vh;
     position:absolute;
     top:6%;
     left:56%;
@@ -255,30 +257,19 @@
     background-repeat: no-repeat;
 }
 
-.main-4-container-circle h1 {
-    font-size: 30px;
-}
-
-.main-4-container-circle h1 {
-    font-size:  50px;  
-    font-weight: 500;
-    color: rgb(0, 0, 0);       
-}
-
-
 .main-4-container-explain {
-    margin-top: 20px;
-    width:300px;
-    height: 30px;
+    margin-top: 2vh;
+    width:37vh;
+    height: 3.5vh;
     background-color: #38969e;
-    border-radius: 20px;
+    border-radius: 3vh;
     display: flex;
     align-items:  center;
     justify-content: center;
 }
 
 .main-4-container-explain h1 {
-    font-size: 16px;
+    font-size:2vh;
 }
 
 /*main-4-0*/
@@ -312,30 +303,35 @@
 }
 
 .main-4-1-button {
-    margin-top: 20px;
-    width: 80px;
-    height: 29px;
-    border-radius: 25px;
+    margin-top: 1vh;
+    width: 12vh;
+    height: 4vh;
+    border-radius: 3vh;
     border: 2px solid rgb(103, 28, 107);
-    margin-bottom: 25px;
+    margin-bottom: 2.5vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+.main-4-1button h1 {
+    font-size: 1.5vh;
+}
 
 .main-4-1 h1 {
-    font-size: 18px;
+    font-size: 2vh;
     font-weighT: 500;
     color: rgb(121, 39, 126);
 }
 
 .main-4-1 h2 {
-    margin-top: 3px;
-    font-size: 19px;
-    font-weighT: 600;
+    position:relative;
+    top:-0.8vh;
+    margin-top: 1vh;
+    font-size: 2.5vh;
+    font-weight: 600;
     color: rgb(103, 28, 107);
-    margin-bottom: 22px;
+    margin-bottom: 2vh;
 }
 
 .main-4-1-button h1 {
@@ -367,8 +363,8 @@
 }
 
 .main-5-container-post-box {
-    width: 65%;
-    margin-top: 50px;
+    width: 120vh;
+    margin-top: 2vh;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -377,11 +373,11 @@
 
 .main-5-container-post {
     box-shadow: 5px 7px 20px #2929293d;
-    width: 400px;
-    height:500px;
+    width: 45vh;
+    height:55vh;
     background-color: rgb(255, 255, 255);
-    border-radius: 4px;
-    padding: 10px 9px 15px 15px;
+    border-radius: 0.7vh;
+    padding: 1.5vh 2vh 1.5vh 2vh;
     box-sizing: border-box;
     color: black;
     display: flex;
@@ -391,33 +387,32 @@
 
 .post-title { 
     display: flex;
-    height: 50px;
-    padding-bottom:3px;
+    height: 7vh;
+    padding-bottom: 1vh;
     align-items: center;
     justify-content: space-between;     
 }
 
 .dot {
-    width: 40px;
-    height: 40px;
+    width: 5vh;
+    height: 5vh;
     position: relative;;
-    top: -10px;
+    top: -1.5vh;
 }
-
-.post-profile {
-    width: 30px;
-    height: 30px;
+.main-5-container-post .post-profile {
+    width: 5vh;
+    height: 5vh;
     background-color: black;
     border-radius:50%;
 }
    
 .post-author {
-    font-size: 10px;
-    margin-left: 15px;
+    font-size: 1vh;
+    margin-left: 1.3vh;
 }
 
 .post-content {
-    font-size: 25px;
+    font-size: 2vh;
     text-overflow: ellipsis;
     width: 100%;
     box-sizing:border-box;
@@ -426,31 +421,38 @@
 }
 /*여기는 잠시 mCustomScrollbar*/
 #mCSB_1_container {
-    margin-right: 20px;
+    margin-right: 2.5vh;
 }
 /*여기까지ㅏ*/
 
 .main-5-container-comment {
-    height: 500px;
+    height: 55vh;
+}
+
+.main-5-container-comment .post-profile {
+    width: 3.5vh;
+    height: 3.5vh;
+    background-color: black;
+    border-radius:50%;
 }
 
 .comment-box {
-    width: 500px;
-    min-height: 50px;
+    width: 60vh;
+    min-height: 5vh;
     background-color: #ffffff;
-    border-radius: 4px;
+    border-radius: 0.7vh;
     color: black;
     display: flex;
     flex-direction: row;
-    padding: 10px;
+    padding: 1vh;
     box-sizing: border-box;
-    margin-bottom: 30px;
+    margin-bottom: 4vh;
     box-shadow: 5px 7px 20px #2929293d;
     cursor: pointer;
 }
 
 .comment {
-    margin-left: 20px;
+    margin-left: 1.5vh;
     width:90%;
     height: 100%;
 }
@@ -460,7 +462,7 @@
     height: 100%;
     overflow: hidden; 
     text-overflow: ellipsis; 
-   font-size: 25px;
+    font-size: 2vh;
     word-break: break-all;
     display: -webkit-box;  
     -webkit-line-clamp: 2;
