--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -2,7 +2,7 @@
     width: 100%;
     box-sizing: border-box;
     height: 100%;
-    padding-top: 100px;
+    padding-top: 9vh;
     background: rgb(255, 182, 87) url("login.png") 100% 100% repeat;
     display:flex;
     flex-direction: column;
