--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
     outline: none;
 }
 
+
 html,body {
     width: 100%;
     height: 100%;
@@ -54,7 +55,7 @@ a {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    box-shadow: 5px 7px 20px #2929293d;
+    box-shadow: 0vh 0vh 4vh #2929293d;
     overflow:hidden;    
 }
 
