--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -159,7 +159,7 @@
 
                     </div>
                     <div class="comment">
-                        <h1>Jang Young Jae Excellent!Excellent!Excellent!Excellent!Excellent!Excellent!Excellent!Excellent!</h1>
+                        <h1>Jang Young Jae Excellent!Excellent!Excelt!Excellent!Excellent!Excellet!Excellent!Excellent!Excellelent!Excellent!Excellent!Excellent!Excellent!Excellent!</h1>
                     </div>
                 
                 </div>
@@ -177,7 +177,7 @@
 
                         </div>
                         <div class="comment">
-                            <h1>Jang Young Jae Excellent!Excellent!Excellent!Excellent!Excellent!Excellent!Excellent!Excellent!</h1>
+                            <h1>Jang Young Jae Excellent!Excellent!Excellent!Excellent!!</h1>
                         </div>
                     
                 </div>
@@ -205,7 +205,7 @@ function movetop() {
 }
 function movequiz() {
     var offset = $(".main-4").offset();
-    $('html, body').animate({scrollTop : offset.top-100}, 800);
+    $('html, body').animate({scrollTop : offset.top}, 800);
 }
 function toggle_comment() {
     $('.comment-box h1').css({'white-space': 'initial' })
