--- a/app/views/home/qna.html.erb
+++ b/app/views/home/qna.html.erb
@@ -13,8 +13,8 @@
         <button onclick="startMove()"><h1>Let's Start!</h1></button>
     </div>
     <div class="quiz-2">
-        <img class="quiz-left" src="/assets/arrow3.svg" style="width:40px;height:40px;transform:rotate(90deg);position:absolute;z-index:999;left:19%;top:50%;display:none;" onclick="leftMove()">
-        <img class="quiz-right" src="/assets/arrow3.svg" style="width:40px;height:40px;transform:rotate(270deg);position:absolute;z-index:999;left: 77%;top:50%;" onclick="rightMove()">
+        <img class="quiz-left" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(90deg);position:absolute;z-index:999;left:20%;top:50%;display:none;" onclick="leftMove()">
+        <img class="quiz-right" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(270deg);position:absolute;z-index:999;left: 77%;top:50%;" onclick="rightMove()">
         <div class="quiz-2-container">
         <%i = 0%>
         <%while i < 15 do%>
@@ -52,14 +52,14 @@
     console.log(quiz_css_submit);
     $(`${quiz_css_submit}`).appendTo("head");
        
-    var scroll = $("body").width()*0.6;
-    $(".quiz-2-container-content").css({"width": `${scroll}`});
-    $("body").css({"overflow": "hidden"});
+    var scroll = $(".quiz-2-container-content").width();
+    // $(".quiz-2-container-content").css({"width": `${scroll}`});
+    $(".quiz-2-container").css({"scroll-x": "hidden"});
     var quiz_number=1;
 
     function startMove() {
         var offset = $(".quiz-2").offset();
-        $('html, body').animate({top :  -$("body").height()*0.5}, 800);
+        $('html, body').animate({scrollTop : offset.top}, 800);
     }
 
     function leftMove() {
@@ -71,6 +71,7 @@
         }
         if (quiz_number > 1) {
             quiz_number-=1
+            var offset = $(".quiz-2").offset();
             $('.quiz-2-container').animate({left : `+=${scroll}`}, 600);
         }
     
