--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,11 +42,11 @@
             <img src="/assets/book.svg">
             <h1>Education</h1>
           </a>
-          <a class="nav-menu" href="/posts/index" style="left:1vh">
+          <a class="nav-menu" href="/posts" style="left:1vh">
             <img src="/assets/community1.svg" style="top:0vh;height: 6.5vh;">
             <h1 style="top:-2.3vh">Community</h1>
           </a>
-           <a class="nav-menu" href="/posts/index" style="left:1.5vh;">
+           <a class="nav-menu" href="/counsel/index" style="left:1.5vh;">
             <img src="/assets/counsel.svg" style="top:-0.2vh;height:5.2vh">
             <h1 style="top:-1.4vh">Counsel</h1>
           </a>
