--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,9 +14,9 @@
             여러분과 같은 사람을 만나고<br>
             서로 알아갈 수 있는 기회입니다!<br>
         </h2>
-        <img src="assets/공감start.png" alt="" style="width: 40vh;height: auto;margin-top:20px;cursor:pointer" onclick="movequiz()">
-        <img src="assets/arrow.svg" alt="" style="width:6vh;height: 6vh;fill:white;position:relative;top:-3vh;">
-        <img src="assets/arrow.svg" alt="" style="width: 6vh;height: 6vh;fill:white;position:relative;top: -6vh">
+        <img src="/assets/공감start.png" alt="" style="width: 40vh;height: auto;margin-top:20px;cursor:pointer" onclick="movequiz()">
+        <img src="/assets/arrow.svg" alt="" style="width:6vh;height: 6vh;fill:white;position:relative;top:-3vh;">
+        <img src="/assets/arrow.svg" alt="" style="width: 6vh;height: 6vh;fill:white;position:relative;top: -6vh">
     </div>
 </div>
 
@@ -100,7 +100,7 @@
 
 <div class="main-4">
     <div class="main-4-container">
-            <a class="main-4-container-circle" href="/home/qna">
+            <a class="main-4-container-circle" href="/home/quiz">
                 
             </a>
             <h1>나는 성지식을 얼마나 많이 알고 있을까?<br>테스트로 나의 '성진성'을 측정해보아요!</h1>
