--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
             width: 140vh;
         }
         .nav {
-          position: absolute;
+          position: fixed;
         }
     }
     @media only screen and (min-width: 140vh) {
